--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -99,7 +99,7 @@
       "zeroalltabindexes": true
     },
     "Author": "",
-    "BindingErrorCount": 0,
+    "BindingErrorCount": 1,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "DesktopOrTablet",
@@ -115,13 +115,13 @@
     "Id": "ff6a17d8-c7b1-4cc7-afe0-f843cafb4445",
     "InstrumentationKey": "",
     "ManualOfflineProfileId": "",
-    "Name": "Badeco sljedivost i napredno sklad",
+    "Name": "10fa25e6-fe8b-4ffc-8409-a2772398f44c",
     "OriginatingVersion": "1.341",
     "ParserErrorCount": 1,
     "ShowStatusBar": false
   },
   "PublishInfo": {
-    "AppName": "10fa25e6-fe8b-4ffc-8409-a2772398f44c",
+    "AppName": "fadf2bff-08ab-425e-a8bc-bbfe4d90d53d",
     "BackgroundColor": "RGBA(0,176,240,1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "Edit",
