--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -134,10 +134,9 @@
   "ScreenOrder": [
     "scrEntry",
     "xmlNabavniNalog",
-    "xmlTemeljniceInventure",
     "xmlNalogZaPrenos",
     "xmlNalogZaProdaju",
     "xmlPrimke",
-    "Test_7F478737223C4B69"
+    "xmlTemeljniceInventure"
   ]
 }
