--- a/BSiNS/Src/xmlNabavniNalog.fx.yaml
+++ b/BSiNS/Src/xmlNabavniNalog.fx.yaml
@@ -988,20 +988,18 @@
                     Notify("Error occurred while Get request, check if file exists.",NotificationType.Error,5000),
                     Set(purchase, GetXML_Nabavni_Nalog.Run(file_Name, "ReadyForProcessing"))
                 );
-                //Set(purchase_line, purchase.purchase_line); 
-                //Set(purchase_header, ParseJSON(purchase.purchase_header));
                 
-                Set(purchaseJson,ParseJSON(purchase.xc));
-                Set(purchase_header,purchaseJson.Purchase_Header);
+                Set(purchase_line, purchase.purchase_line); 
+                Set(purchase_header, ParseJSON(purchase.purchase_header));
+                
                 
                 Clear(colPurchaseLines);
                 ForAll(
-                    purchaseJson.Purchase_Header.Purchase_Line,
+                    ParseJSON(purchase_line),
                     Collect(
                         colPurchaseLines,
                         {
-                            //Purchase_Line: {
-                               Document_Type: Text(ThisRecord.Document_Type),
+                             Document_Type: Text(ThisRecord.Document_Type),
                               'Buy-from_Vendor_No.': Text(ThisRecord.'Buy-from_Vendor_No.'),
                               Document_No: Text(ThisRecord.Document_No),
                               Line_No: Text(ThisRecord.Line_No),
@@ -1014,7 +1012,6 @@
                               Quantity: Text(ThisRecord.Quantity),
                               LOT_No: Text(ThisRecord.LOT_No),
                               Exp_Date: Text(ThisRecord.Exp_Date)
-                              //}
                         }
                     );
                 );
