--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -99,7 +99,7 @@
       "zeroalltabindexes": true
     },
     "Author": "",
-    "BindingErrorCount": 5,
+    "BindingErrorCount": 7,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "DesktopOrTablet",
@@ -134,10 +134,9 @@
   "ScreenOrder": [
     "scrEntry",
     "xmlNabavniNalog",
-    "xmlTemeljniceInventure",
     "xmlNalogZaPrenos",
     "xmlNalogZaProdaju",
     "xmlPrimke",
-    "Test_7F478737223C4B69"
+    "xmlTemeljniceInventure"
   ]
 }
