--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -1,13 +1,15 @@
 "scrEntry As screen.'autoLayout_Sidebar_ver1.0'":
     Fill: =RGBA(45, 128, 40, 1)
     LoadingSpinnerColor: =RGBA(164, 38, 44, 1)
-    OnVisible: |
+    OnHidden: =UpdateContext(Blank());
+    OnVisible: |-
         =//IfError(GetAll.Run("AM-01"),Notify("Error occurred while Get All files request.",NotificationType.Error,2000),Set(getAllFiles, GetAll.Run("AM-01")));
         //Set(ReadyForProcessingFiles,getAllFiles.allreadyforprocessing);
         UpdateContext({
             WarehouseCode: "AM-01",
-            Status: "All"
-            
+            Status: "All",
+            FileType: "All",
+            XMLFiles: GetAll.Run(WarehouseCode, Status, FileType).xmlfiles
         });
 
     ScreenContainer2 As groupContainer.verticalAutoLayoutContainer:
@@ -940,12 +942,15 @@
                         Items: =["All", "Ready for processing", "In progress"]
                         LayoutMinHeight: =32
                         LayoutMinWidth: =320
+                        OnChange: |-
+                            =UpdateContext({Status: dd_Status.Selected.Value});
+                            GetAll.Run(WarehouseCode, Status, FileType);
                         Width: =652
                         X: =0
                         Y: =0
                         ZIndex: =1
 
-                    dd_Type As Dropdown.pcfdataset:
+                    dd_FileType As Dropdown.pcfdataset:
                         DefaultSelectedItems: =["All"]
                         DisplayMode: =DisplayMode.Edit
                         FillPortions: =1
@@ -954,6 +959,9 @@
                         Items: =["All", "Temeljnice inventure", "Nabavni nalozi", "Prodajni nalozi", "Nalozi za prenos", "Skladišne primke", "Skladišne otpremnice", "Put-Away Request", "Pick Request"]
                         LayoutMinHeight: =32
                         LayoutMinWidth: =320
+                        OnChange: |-
+                            =UpdateContext({FileType: dd_FileType.Selected.Value});
+                            GetAll.Run(WarehouseCode, Status, FileType);
                         Width: =647
                         X: =0
                         Y: =0
@@ -964,7 +972,7 @@
                     BorderColor: =RGBA(89, 0, 0, 1)
                     DelayItemLoading: =true
                     Height: =321
-                    Items: =CustomGallerySample
+                    Items: =XMLFiles
                     Layout: =Layout.Vertical
                     LayoutMinHeight: =287
                     LayoutMinWidth: =320
