--- a/BSiNS/Src/xmlTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/xmlTemeljniceInventure.fx.yaml
@@ -1065,7 +1065,31 @@
                 JSON(
                     {
                         Lines: {
-                            Item_Journal_Line: colJournalLine
+                            Item_Journal_Line: ForAll(colJournalLine,{
+                                Description: Text('Description'),
+                                'Document_Date': Text('Document_Date'),
+                                'Document_No.': Text('Document_No.'),
+                                'Entry_Type': Text('Entry_Type'),
+                                'Gen_Bus_Posting_Group': Text('Gen_Bus_Posting_Group'),
+                                'Item_Expiration_Date': Text('Item_Expiration_Date'),
+                                'Item_No.': Text('Item_No.'),
+                                'Journal_Batch_Name': Text('Journal_Batch_Name'),
+                                'Journal_Template_Name': Text('Journal_Template_Name'),
+                                'Line_No.': Text('Line_No.'),
+                                'Location_Code': Text('Location_Code'),
+                                'Lot_No': Text('Lot_No'),
+                                'Phys._Inventory': Text('Phys._Inventory'),
+                                'Posting_Date': Text('Posting_Date'),
+                                'Qty_Calculated': Text('Qty_Calculated'),
+                                'Qty_Calculated_Ext': Text('Qty_Calculated_Ext'),
+                                'Qty_Phys_Inventory': Text('Qty_Phys_Inventory'),
+                                'Qty_Phys_Inventory_Ext': Text('Qty_Phys_Inventory_Ext'),
+                                Quantity: Text('Quantity'),
+                                'Sales_Price': Text('Sales_Price'),
+                                'Source_Code': Text('Source_Code'),
+                                'Source_No.': Text('Source_No.'),
+                                'Source_Type': Text('Source_Type')
+                            })
                         }
                     },JSONFormat.IgnoreUnsupportedTypes
                 )
