--- a/BSiNS/Src/xmlNalogZaPrenos.fx.yaml
+++ b/BSiNS/Src/xmlNalogZaPrenos.fx.yaml
@@ -1490,28 +1490,28 @@
                             'Transfer-to_Post_Code': Text(transfer_header.'Transfer-to_Post_Code'),
                             'Transfer-to_City': Text(transfer_header.'Transfer-to_City'),
                             Shortcut_Dimension_1_Code: Text(transfer_header.Shortcut_Dimension_1_Code),
-                            Transfer_Line: ForAll(colTransferLines, 
+                            Transfer_Line: ForAll(colTransferLines As tl, 
                                 {
-                                    Document_No: Text(Document_No),
-                                    Line_No: Text(Line_No),
-                                    Item_No: Text(Item_No),
-                                    'Transfer-from_Code': Text('Transfer-from_Code'),
-                                    'Transfer-to_Code': Text('Transfer-to_Code'),
-                                    'In-Transit_Code': Text('In-Transit_Code'),
-                                    GP_Posting_Group: Text(GP_Posting_Group),
-                                    Inv_Posting_Group: Text(Inv_Posting_Group),
-                                    Description: Text(Description),
-                                    Unit_Of_Measure: Text(Unit_Of_Measure),
-                                    Quantity: Text(Quantity),
-                                    Quantity_Base: Text(Quantity_Base),
-                                    'Qty-to_Ship': Text('Qty-to_Ship'),
-                                    'Qty-to_Receive': Text('Qty-to_Receive'),
-                                    Quantity_Shipped: Text(Quantity_Shipped),
-                                    Quantity_Received: Text(Quantity_Received),
-                                    Outstanding_Qty: Text(Outstanding_Qty),
-                                    Shipment_Date: Text(Shipment_Date),
-                                    Receipt_Date: Text(Receipt_Date),
-                                    Res_Entry: ForAll(Filter(colResEntries, Item_No = ThisRecord.Item_No),
+                                    Document_No: Text(tl.Document_No),
+                                    Line_No: Text(tl.Line_No),
+                                    Item_No: Text(tl.Item_No),
+                                    'Transfer-from_Code': Text(tl.'Transfer-from_Code'),
+                                    'Transfer-to_Code': Text(tl.'Transfer-to_Code'),
+                                    'In-Transit_Code': Text(tl.'In-Transit_Code'),
+                                    GP_Posting_Group: Text(tl.GP_Posting_Group),
+                                    Inv_Posting_Group: Text(tl.Inv_Posting_Group),
+                                    Description: Text(tl.Description),
+                                    Unit_Of_Measure: Text(tl.Unit_Of_Measure),
+                                    Quantity: Text(tl.Quantity),
+                                    Quantity_Base: Text(tl.Quantity_Base),
+                                    'Qty-to_Ship': Text(tl.'Qty-to_Ship'),
+                                    'Qty-to_Receive': Text(tl.'Qty-to_Receive'),
+                                    Quantity_Shipped: Text(tl.Quantity_Shipped),
+                                    Quantity_Received: Text(tl.Quantity_Received),
+                                    Outstanding_Qty: Text(tl.Outstanding_Qty),
+                                    Shipment_Date: Text(tl.Shipment_Date),
+                                    Receipt_Date: Text(tl.Receipt_Date),
+                                    Res_Entry: ForAll(Filter(colResEntries As re, tl.Item_No = re.Item_No),
                                     {
                                         Created_By: Text(Created_By),
                                         Creation_Date: Text(Creation_Date),
