--- a/BSiNS/Src/xmlTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/xmlTemeljniceInventure.fx.yaml
@@ -819,6 +819,7 @@
 
                     TextCanvas1 As Text:
                         DisplayMode: =DisplayMode.Edit
+                        FontColor: =
                         Height: =32
                         Text: =Gallery4_1.Selected.'Line_No.'
                         Width: =148
