--- a/BSiNS/Src/xmlNalogZaPrenos.fx.yaml
+++ b/BSiNS/Src/xmlNalogZaPrenos.fx.yaml
@@ -1501,7 +1501,7 @@
                                     Outstanding_Qty: Text(tl.Outstanding_Qty),
                                     Shipment_Date: Text(tl.Shipment_Date),
                                     Receipt_Date: Text(tl.Receipt_Date),
-                                    Res_Entry: ForAll(Filter(colResEntries As re, tl.Item_No = re.Item_No),
+                                    Res_Entry: ForAll(Filter(colResEntries, ThisRecord.Item_No = tl.Item_No),
                                     {
                                         Created_By: Text(Created_By),
                                         Creation_Date: Text(Creation_Date),
