--- a/BSiNS/Src/xmlNalogZaPrenos.fx.yaml
+++ b/BSiNS/Src/xmlNalogZaPrenos.fx.yaml
@@ -1500,8 +1500,30 @@
                                     Quantity_Received: Text(tl.Quantity_Received),
                                     Outstanding_Qty: Text(tl.Outstanding_Qty),
                                     Shipment_Date: Text(tl.Shipment_Date),
-                                    Receipt_Date: Text(tl.Receipt_Date)
-                                    
+                                    Receipt_Date: Text(tl.Receipt_Date),
+                                    Res_Entry: ForAll(Filter(colResEntries, ThisRecord.Item_No = tl.Item_No),
+                                    {
+                                        Created_By: Text(Created_By),
+                                        Creation_Date: Text(Creation_Date),
+                                        Entry_No: Text(Entry_No),
+                                        Exp_Date: Text(Exp_Date),
+                                        Exp_Receipt_Date: Text(Exp_Receipt_Date),
+                                        Item_No: Text(Item_No),
+                                        Item_Tracking: Text(Item_Tracking),
+                                        LOT_No: Text(LOT_No),
+                                        Location_Code: Text(Location_Code),
+                                        Positive: Text(Positive),
+                                        'Qty-to-Handle_Base': Text('Qty-to-Handle_Base'),
+                                        'Qty-to-Invoice_Base': Text('Qty-to-Invoice_Base'),
+                                        Quantity: Text(Quantity),
+                                        Quantity_Base: Text(Quantity_Base),
+                                        Res_Status: Text(Res_Status),
+                                        Shipment_Date: Text(Shipment_Date),
+                                        Source_ID: Text(Source_ID),
+                                        Source_Ref_No: Text(Source_Ref_No),
+                                        Source_SubType: Text(Source_SubType),
+                                        Source_Type: Text(Source_Type)
+                                    }) 
                                 }
                             )
                         }
